--- a/src/main/resources/templates/unauthorized.html
+++ b/src/main/resources/templates/unauthorized.html
@@ -2,11 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>error</title>
 </head>
 <body>
-<span th:text="${subject}"></span>
-<a href="/admin">admin</a>
-<a href="/role">role</a>
+无权访问哦！
 </body>
 </html>
