--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -2,11 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>error</title>
 </head>
 <body>
-<span th:text="${subject}"></span>
-<a href="/admin">admin</a>
-<a href="/role">role</a>
+出错了！
+<p th:text="${#httpServletRequest.getAttribute('shiroLoginFailure')}"/>
 </body>
 </html>
