--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,5 +8,6 @@
 <span th:text="${subject}"></span>
 <a href="/admin">admin</a>
 <a href="/role">role</a>
+<a href="/logout">logout</a>
 </body>
 </html>
