--- a/src/main/resources/templates/unauthorized.html
+++ b/src/main/resources/templates/unauthorized.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>error</title>
+    <title>unauthorized</title>
 </head>
 <body>
 无权访问哦！
