--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,9 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<span th:text="${subject}"></span>
+<a href="/isAuthenticated">isAuthenticated</a>
+<a href="/isUser">isUser</a>
 <a href="/admin">admin</a>
-<a href="/role">role</a>
+<a href="/md5">md5</a>
+<a href="/sha256">sha256</a>
 <a href="/logout">logout</a>
 </body>
 </html>
