--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,6 +13,7 @@
     <form action="/login" method="post">
         帐号：<input type="text" name="username" value="admin"/><br/>
         密码：<input type="password" name="password" value="123456"/><br>
+        记住我：<input type="checkbox" name="rememberMe"/><br>
         <button type="submit">提交</button><br>
     </form>
 </body>
