--- a/src/main/resources/templates/md5.html
+++ b/src/main/resources/templates/md5.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-@RequiresPermissions("user:test")
+@RequiresPermissions("md5:test")
 <br/>
-@RequiresRoles(value = {"user", "admin"}, logical = Logical.OR)
+@RequiresRoles(value = {"md5", "admin"}, logical = Logical.OR)
 </body>
 </html>
